# shad360

./: .github-CODEOWNERS  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  build.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
src/backend/: CMakeLists.txt  shad360_api.cc
src/backend/src/xenia/api/: CMakeLists.txt  shad360_api.h
src/frontend/Shad360.Core/: Shad360.Core.csproj
src/frontend/Shad360.Core/Constants/: AppPaths.cs  ArgumentFlags.cs  EmulatorPaths.cs  Urls.cs
src/frontend/Shad360.Core/Converters/: ByteArrayToImageSourceConverter.cs  CollectionIsEmptyConverter.cs  CompatibilityRatingColorConverter.cs  CompatibilityRatingToStringConverter.cs  ConfigControlTypeToVisibilityConverter.cs  DoubleFormatConverter.cs  InverseBoolConverter.cs  LogLevelJsonConverter.cs  NotNullConverter.cs  PlaytimeConverter.cs  StringIsEmptyConverter.cs  StringIsNotEmptyConverter.cs  ZoomScaleConverter.cs
src/frontend/Shad360.Core/Database/: GameCompatibilityDatabase.cs  OptimizedSettingsDatabase.cs  PatchesDatabase.cs  XboxDatabase.cs
src/frontend/Shad360.Core/Extensions/: AnimationExtensions.cs  BindingExtensions.cs
src/frontend/Shad360.Core/Files/: AccountFile.cs  BindingsFile.cs  ConfigFile.cs  GpdFile.cs  HeaderFile.cs  IsoFile.cs  PatchFile.cs  SteamShortcutsFile.cs  StfsFile.cs  VdfFile.cs  XConfigFile.cs  XexFile.cs  ZarFile.cs
src/frontend/Shad360.Core/Installation/: InstallationHelper.cs  XeniaService.cs
src/frontend/Shad360.Core/Logging/: Logger.cs
src/frontend/Shad360.Core/Manage/: ArtworkManager.cs  ConfigManager.cs  GameManager.cs  Launcher.cs  NativeLauncher.cs  PatchManager.cs  ProfileManager.cs  SaveManager.cs  ShortcutManager.cs  UnifiedLauncher.cs  XConfigManager.cs  XeniaOutputHandler.cs
src/frontend/Shad360.Core/Models/: EnumDisplayItem.cs  MessageBoxDialogType.cs  ReleaseCache.cs  ReleaseType.cs  Theme.cs
src/frontend/Shad360.Core/Models/Files/: FileSignature.cs
src/frontend/Shad360.Core/Models/Game/: Compatibility.cs  CompatibilityRating.cs  EmulatorVersion.cs  Game.cs  GameArtwork.cs  GameFiles.cs  GameSortOption.cs  ParsedGameDetails.cs
src/frontend/Shad360.Core/Models/InputListener/: KeyEventArgs.cs
src/frontend/Shad360.Core/Models/Items/: AccountContent.cs  LanguageItem.cs  ThemeDisplayItem.cs
src/frontend/Shad360.Core/Native/: Shad360Api.cs
src/frontend/Shad360.Core/Services/: EventManager.cs
src/frontend/Shad360.Core/Settings/: AbstractSettings.cs  ISettingsService.cs  LenientJsonDeserializer.cs  Settings.cs
src/frontend/Shad360.Core/Settings/Sections/: BaseSettingsStore.cs  DebugSettings.cs  EmulatorSettings.cs  GeneralSettings.cs  UiSettings.cs  UpdateCheckSettings.cs
src/frontend/Shad360.Core/Utilities/: AppPathResolver.cs  ArchiveExtractor.cs  ArgumentParser.cs  CryptoUtils.cs  DownloadManager.cs  FileIdentifier.cs  HttpClientService.cs  InputListener.cs  LocalizationHelper.cs  PlatformUtilities.cs  PlaytimeFormatter.cs  ProcessUtilities.cs  ReleaseService.cs  SecretCodeListener.cs  SecurityUtilities.cs  StorageUtilities.cs
src/frontend/Shad360.UI/: App.axaml  App.axaml.cs  Program.cs  Shad360.UI.csproj  app.manifest
src/frontend/Shad360.UI/Assets/: icon.icns
src/frontend/Shad360.UI/Controls/: AddGamesProgressDialog.axaml  AddGamesProgressDialog.axaml.cs  ConfigEditorControl.axaml  ConfigEditorControl.axaml.cs  ConfigEditorDialog.axaml  ConfigEditorDialog.axaml.cs  ContentViewerDialog.axaml  ContentViewerDialog.axaml.cs  EditXConfigDialog.axaml  EditXConfigDialog.axaml.cs  FolderScanProgressDialog.axaml  FolderScanProgressDialog.axaml.cs  GameDetailsEditor.axaml  GameDetailsEditor.axaml.cs  InstallContentDialog.axaml  InstallContentDialog.axaml.cs  ManageProfilesDialog.axaml  ManageProfilesDialog.axaml.cs  MousehookControlsEditorDialog.axaml  MousehookControlsEditorDialog.axaml.cs  OptimizedSettingsDialog.axaml  OptimizedSettingsDialog.axaml.cs  PatchConfigurationDialog.axaml  PatchConfigurationDialog.axaml.cs  PatchSelectionDialog.axaml  PatchSelectionDialog.axaml.cs  WelcomeDialog.axaml  WelcomeDialog.axaml.cs
src/frontend/Shad360.UI/Controls/Cards/: CardHeader.axaml  CardHeader.axaml.cs  ComboBoxCard.axaml  ComboBoxCard.axaml.cs  CustomCard.axaml  CustomCard.axaml.cs  DownloadProgressCard.axaml  DownloadProgressCard.axaml.cs  NumberBoxCard.axaml  NumberBoxCard.axaml.cs  SliderCard.axaml  SliderCard.axaml.cs  TextBoxCard.axaml  TextBoxCard.axaml.cs  ToggleSwitchCard.axaml  ToggleSwitchCard.axaml.cs
src/frontend/Shad360.UI/Resources/Language/: en.axaml
src/frontend/Shad360.UI/Services/: MessageBoxService.cs  NavigationService.cs  NotificationService.cs  ServiceConfigurator.cs  ThemeService.cs
src/frontend/Shad360.UI/ViewModels/: LoadingScreenWindowViewModel.cs  MainViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
src/frontend/Shad360.UI/ViewModels/Controls/: AddGamesProgressDialogViewModel.cs  ConfigEditorViewModel.cs  ConfigOptionViewModel.cs  ConfigSectionViewModel.cs  ContentViewerDialogViewModel.cs  EditXConfigDialogViewModel.cs  FolderScanProgressDialogViewModel.cs  GameDetailsEditorViewModel.cs  InstallContentDialogViewModel.cs  ManageProfilesDialogViewModel.cs  MousehookControlsEditorDialogViewModel.cs  OptimizedSettingsDialogViewModel.cs  PatchConfigurationViewModel.cs  PatchSelectionDialogViewModel.cs  WelcomeDialogViewModel.cs
src/frontend/Shad360.UI/ViewModels/Items/: AchievementViewModel.cs  BindingsEntryViewModel.cs  BindingsOptionItem.cs  ContentItemViewModel.cs  GameItemViewModel.cs  HeaderFileViewModel.cs  OptimizedSettingOptionViewModel.cs  PatchItemViewModel.cs
src/frontend/Shad360.UI/ViewModels/Pages/: AboutPageViewModel.cs  LibraryPageViewModel.cs  ManagePageViewModel.cs  SettingsPageViewModel.cs  Shad360SettingsPageViewModel.cs  XeniaSettingsPageViewModel.cs
src/frontend/Shad360.UI/Views/: LoadingScreenWindow.axaml  LoadingScreenWindow.axaml.cs  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
src/frontend/Shad360.UI/Views/Pages/: AboutPage.axaml  (+7 more)
(+76 files in other folders)
